--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,26 @@
+glibc (2.31-10) unstable; urgency=medium
+
+  [ Samuel Thibault ]
+  * debian/patches/hurd-i386/git-tiocflush.diff: Cope with
+    BSD 4.1-ish ioctl(..., TIOCFLUSH, NULL).
+  * debian/debhelper.in/libc-udeb.install.hurd-i386: Add missing
+    libmachuser/libhurduser.
+  * debian/testsuite-xfail-debian.mk: Update tests.
+
+  [ Aurelien Jarno ]
+  * debian/patches/git-updates.diff: update from upstream stable branch:
+    - Fix a possible assertion failure in iconv when converting
+      from ISO-2022-JP-3 to UTF-8 (CVE-2021-3326).  Closes: #981198.
+    - Fix a possible double-free in nscd when processing a request for netgroup
+      lookup (CVE-2021-27645).  Closes: #983479.
+  * debian/debhelper.in/libc.preinst: fallback to text mode in case 1) debconf
+    is about to use the dialog frontend with whiptail or frontend and 2) the
+    corresponding executable is unusable.  Closes: #984533.
+  * debian/rules.d/debhelper.mk: correctly strip libpthread.so for bi/triarch
+    builds.  Closes: #983457.
+
+ -- Aurelien Jarno <aurel32@debian.org>  Sun, 21 Mar 2021 00:38:37 +0100
+
 glibc (2.31-9) unstable; urgency=medium
 
   [ Samuel Thibault ]
