--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+glibc (2.31-11) unstable; urgency=medium
+
+  * debian/debhelper.in/libc.preinst: handle the case where debconf
+    configuration has never been done.  Closes: #986180.
+
+ -- Aurelien Jarno <aurel32@debian.org>  Wed, 31 Mar 2021 22:09:32 +0200
+
 glibc (2.31-10) unstable; urgency=medium
 
   [ Samuel Thibault ]
