--- a/debian/po/de.po
+++ b/debian/po/de.po
@@ -12,7 +12,7 @@ msgstr ""
 "Language-Team: de <debian-l10n-german@lists.debian.org>\n"
 "Language: German\n"
 "MIME-Version: 1.0\n"
-"Content-Type: text/plain; charset=ISO-8859-15\n"
+"Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 
 #. Type: multiselect
