--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,29 @@
+glibc (2.31-17) unstable; urgency=medium
+
+  [ Samuel Thibault ]
+  * debian/testsuite-xfail-debian.mk: Update tests.
+
+  [ Aurelien Jarno ]
+  * debian/debhelper.in/locales.NEWS: fix charset mismatch in example iconv
+    command.  Closes: #992568
+  * Replace the non UTF-8 locales removal by a deprecation as they are still
+    used in many other packages (especially testsuites): non UTF-8 locales are
+    not offered anymore in the debconf dialog (except for the ones already
+    configured), but they are still listed in SUPPORTED and provided in the
+    locales-all package (Closes: #992500, #992653):
+    - debian/patches/localedata/locale-en_DK.diff,
+      debian/patches/localedata/locale-eu_FR.diff,
+      debian/patches/localedata/supported.diff: revert the removal of non-UTF-8
+      locales.
+    - debian/debhelper.in/locales-all.NEWS: remove 2.31-14 entry.
+    - debian/rules.d/debhelper.mk: fill __PROVIDED_LOCALES__ with UTF-8
+      locales only.
+
+  [ Johannes Schauer Marin Rodrigues ]
+  * additional bits to support DPKG_ROOT (closes: #983412)
+
+ -- Aurelien Jarno <aurel32@debian.org>  Mon, 23 Aug 2021 21:31:23 +0200
+
 glibc (2.31-16) unstable; urgency=medium
 
   [ Aurelien Jarno ]
