--- a/debian/changelog
+++ b/debian/changelog
@@ -1,9 +1,37 @@
+glibc (2.32-0experimental1) experimental; urgency=medium
+
+  [ Samuel Thibault ]
+  * debian/patches/hurd-i386/local-clock_gettime_MONOTONIC.diff: Complete with
+    timed locks.
+  * debian/testsuite-xfail-debian.mk: Update tests.
+  * debian/patches/hurd-i386/git-get_errlist.diff: Fix get_errlist.
+  * debian/patches/hurd-i386/local-mach_print.diff: Keep mach_print@GLIBC_2.21
+    for now, until packages are rebuilt against mach_print@@GLIBC_2.32.
+  * debian/patches/hurd-i386/local-stack_chk_guard.diff: Fix compatibility with
+    binaries that reference __stack_chk_guard.
+
+  [ Aurelien Jarno ]
+  * debian/patches/git-updates.diff: update from upstream stable branch:
+    - Fix tst-sysvshm-linux failure on armel and x32.
+  * Remove the libc0.3-xen and libc6-xen packages as glibc 2.32 removed
+    support for the nosegneg hwcap, and 32-bit Xen PV support has been removed
+    from Linux kernel 5.9:
+    - debian/control.in/opt: remove libc0.3-xen and libc6-xen.
+    - debian/patches/any/local-ldso-disable-hwcap.diff: stop looking for
+      /etc/ld.so.nohwcap on i386.
+    - debian/sysdeps/hurd-i386.mk, debian/sysdeps/i386.mk: remove the xen
+      pass.
+    - debian/debhelper.in/libc.NEWS: add an entry explaining the removal of
+      the libc0.3-xen and libc6-xen packages.
+
+ -- Aurelien Jarno <aurel32@debian.org>  Tue, 24 Aug 2021 20:42:24 +0200
+
 glibc (2.32-0experimental0) experimental; urgency=medium
 
   [ Aurelien Jarno ]
   * New upstream release:
     - Fixes a use-after-free in the mq_notify function (CVE-2021-33574).
-      Closes: #964477.
+      Closes: #989147.
     - debian/symbols.wildcard: add 2.32.
     - debian/patches/localedata/supported.diff: refresh.
     - debian/patches/localedata/git-unicode-13-support.diff: upstreamed.
@@ -59,6 +87,32 @@ glibc (2.32-0experimental0) experimental; urgency=medium
     upstream to fix FTBFS on hurd-i386.
 
  -- Aurelien Jarno <aurel32@debian.org>  Sat, 21 Aug 2021 19:24:41 +0200
+
+glibc (2.31-17) unstable; urgency=medium
+
+  [ Samuel Thibault ]
+  * debian/testsuite-xfail-debian.mk: Update tests.
+
+  [ Aurelien Jarno ]
+  * debian/debhelper.in/locales.NEWS: fix charset mismatch in example iconv
+    command.  Closes: #992568
+  * Replace the non UTF-8 locales removal by a deprecation as they are still
+    used in many other packages (especially testsuites): non UTF-8 locales are
+    not offered anymore in the debconf dialog (except for the ones already
+    configured), but they are still listed in SUPPORTED and provided in the
+    locales-all package (Closes: #992500, #992653):
+    - debian/patches/localedata/locale-en_DK.diff,
+      debian/patches/localedata/locale-eu_FR.diff,
+      debian/patches/localedata/supported.diff: revert the removal of non-UTF-8
+      locales.
+    - debian/debhelper.in/locales-all.NEWS: remove 2.31-14 entry.
+    - debian/rules.d/debhelper.mk: fill __PROVIDED_LOCALES__ with UTF-8
+      locales only.
+
+  [ Johannes Schauer Marin Rodrigues ]
+  * additional bits to support DPKG_ROOT (closes: #983412)
+
+ -- Aurelien Jarno <aurel32@debian.org>  Mon, 23 Aug 2021 21:31:23 +0200
 
 glibc (2.31-16) unstable; urgency=medium
 
