--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,24 @@
+glibc (2.31-13+deb11u2) bullseye; urgency=medium
+
+  [ Aurelien Jarno ]
+  * debian/debhelper.in/libc.preinst: do not try to detect if debconf is
+    available when the debconf frontend has already been loaded.
+
+ -- Aurelien Jarno <aurel32@debian.org>  Sat, 02 Oct 2021 14:47:40 +0200
+
+glibc (2.31-13+deb11u1) bullseye; urgency=medium
+
+  [ Aurelien Jarno ]
+  * debian/script.in/nsscheck.sh: restart openssh-server even if it has been
+    deconfigured during the upgrade.  Closes: #990069.
+  * debian/debhelper.in/libc.preinst: fix text fallback when debconf is
+    unusable, the current debconf configuration should be queried without
+    first sourcing the confmodule to avoid losing control of the tty. Big
+    thanks to Colin Watson for the help diagnosing the issue and for providing
+    an easy reproducer.  Closes: #994042.
+
+ -- Aurelien Jarno <aurel32@debian.org>  Thu, 30 Sep 2021 22:47:49 +0200
+
 glibc (2.31-13) unstable; urgency=medium
 
   [ Colin Watson ]
